--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ requests = "^2.32.3"
 [tool.poetry.group.dev.dependencies]
 dagster-webserver = "1.7.8"
 dagster-duckdb = "^0.23.8"
+ipython = "^8.25.0"
+pandas = "^2.2.2"
 
 [build-system]
 requires = ["poetry-core"]
