--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,26 @@ jobs:
       run: |
         echo "The version increment was: ${{ steps.taggerDryRun.outputs.part }}"
     # DO MY BUILD HERE
-    # IN CASE OF FAILURE, THE STEP BELOW WILL NOT RUN.
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v3
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Build and push Docker images
+      # You may pin to the exact commit or the version.
+      uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0
+      with:
+        # List of a customs host-to-IP mapping (e.g., docker:10.180.0.1)
+        # Build's context is the set of files located in the specified PATH or URL
+        context: . # optional
+        # Path to the Dockerfile
+        # List of tags
+        tags: ghcr.io/reinthal:${{ steps.taggerDryRun.outputs.new_tag }} # optional
+ 
+        # GitHub Token used to authenticate against a repository for Git context
+        github-token: ${{ github.token }} # optional, default is ${{ github.token }}
+          
     
 
     - name: Minor version for each merge
