--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - main
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.repository }}
 concurrency: production
 jobs:
   Patch:
@@ -32,9 +35,14 @@ jobs:
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v3
       with:
-        registry: ghcr.io
+        registry: ${{ env.REGISTRY }}
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
+    - name : extract metadata (tags, labels) for Docker
+      id: meta
+      uses: docker/metadata-action@v2
+      with:
+        images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
     - name: Build and push Docker images
       # You may pin to the exact commit or the version.
       uses: docker/build-push-action@2cdde995de11925a030ce8070c3d77a52ffcf1c0
@@ -42,12 +50,14 @@ jobs:
         # List of a customs host-to-IP mapping (e.g., docker:10.180.0.1)
         # Build's context is the set of files located in the specified PATH or URL
         context: . # optional
+        push: true
         # Path to the Dockerfile
         # List of tags
-        tags: ghcr.io/reinthal:${{ steps.taggerDryRun.outputs.new_tag }} # optional
+        tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.taggerDryRun.outputs.new_tag }}, ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.sha }}, ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest # optional
+        labels: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.meta.outputs.labels}}
  
         # GitHub Token used to authenticate against a repository for Git context
-        github-token: ${{ github.token }} # optional, default is ${{ github.token }}
+        github-token: ${{ github.token }} # optional
           
     
 
