--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "3.10.14"
-dagster = "^1.7.8"
+dagster = "~1.7.8"
 dagster-duckdb = "^0.23.8"
 requests = "^2.32.3"
+dagster-snowflake-pandas = "0.23.10"
 
 [tool.poetry.group.dev.dependencies]
-dagster-webserver = "1.7.8"
+dagster-webserver = "~1.7.8"
 ipython = "^8.25.0"
 pandas = "^2.2.2"
 
