--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Alexander Reinthal <reinthal@pm.me>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "3.10.14"
+python = "^3.10,<3.12"
 dagster = "~1.7.8"
 dagster-duckdb = "^0.23.8"
 requests = "^2.32.3"
