Add example configuration

--- a/env.example
+++ b/env.example
@@ -1,6 +1,6 @@
-SNOWFLAKE_DATABASE=""
-SNOWFLAKE_ACCOUNT=""
-SNOWFLAKE_USER=""
-SNOWFLAKE_PASSWORD=""
-SNOWFLAKE_ROLE=""
-SNOWFLAKE_WAREHOUSE=""
+DESTINATION__SNOWFLAKE__DATABASE="DATADRIVEN_KNOWITALEX_DEV"
+DESTINATION__SNOWFLAKE__ACCOUNT="ut63892.north-europe.azure"
+DESTINATION__SNOWFLAKE__USER="KNOWITALEX"
+DESTINATION__SNOWFLAKE__PASSWORD="CONFIGUREME"
+DESTINATION__SNOWFLAKE__ROLE="DEVELOPMENT"
+DESTINATION__SNOWFLAKE__WAREHOUSE="ADHOC"
