--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ dagster = "~1.7.8"
 dagster-duckdb = "^0.23.8"
 requests = "^2.32.3"
 dagster-snowflake-pandas = "0.23.10"
+dlt = {extras = ["snowflake"], version = "^0.4.12"}
 
 [tool.poetry.group.dev.dependencies]
 dagster-webserver = "~1.7.8"
