--- a/env.example
+++ b/env.example
@@ -4,3 +4,4 @@ DESTINATION__SNOWFLAKE__CREDENTIALS__USERNAME="KNOWITALEX"
 DESTINATION__SNOWFLAKE__CREDENTIALS__PASSWORD="CONFIGUREME"
 DESTINATION__SNOWFLAKE__CREDENTIALS__ROLE="DEVELOPMENT"
 DESTINATION__SNOWFLAKE__CREDENTIALS__WAREHOUSE="ADHOC"
+PROGRESS=enlighten
