add dagster stuff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,16 +7,16 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10,<3.12"
-dagster = "~1.7.8"
-dagster-duckdb = "^0.23.8"
+dagster = "~1.7.12"
 requests = "^2.32.3"
-dagster-snowflake-pandas = "0.23.10"
+dagster-snowflake-pandas = "^0.23.12"
 dlt = {extras = ["snowflake"], version = "^0.4.12"}
 poetry-dotenv-plugin = "^0.1.0"
 enlighten = "^1.12.4"
+dagster-embedded-elt = "^0.23.12"
 
 [tool.poetry.group.dev.dependencies]
-dagster-webserver = "~1.7.8"
+dagster-webserver = "~1.7.12"
 ipython = "^8.25.0"
 pandas = "^2.2.2"
 streamlit = "^1.36.0"
